[package]
name = "code-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
hyper = "0.14"
tower = "0.4"
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
