[package]
name = "code-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
hyper = "0.14"
libc = "0.2"
nix = "0.26.2"
tower = "0.4"
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
